Description
When we are scanning with StringDictionaryColumnReader an encoded batch, ORC crashes if we want to read more elements than the current capacity of the batch. It can occur eg. with string lists where it's possible that the offsets defined in the list overflows in the index buffer of the EncodedStringDictionaryBatch.
To fix we only have to define a resize method for EncodedStringDictionaryBatch that also resizes the index buffer.
Attachments
Issue Links
- blocks
-
IMPALA-9226 Improve string allocations of the ORC scanner
-
- Resolved
-
- links to